# whatsdb

./: .gitignore  README.md  analyze_chat.py  build_db.py  count_messages.py  merge.sql  merge_db.py  plot_messages.py  pyproject.toml  stopwords.txt
examples/: analyze_chat.py  markov_generator.py  plot_messages.py  sender_classifier.py  stopwords.txt  summarize_recent.py
tests/: test_build_db.py  test_merge_db.py
