[project]
name = "whatsdb"
version = "0.3.3"
description = "Parse WhatsApp chat exports into a SQLite database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
whatsdb = "build_db:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["build_db"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
